[metadata]
name = torch-dicom
version = 0.1.0
author = Scott Chase Waggener
license_file = LICENSE

[options]
python_requires = >=3.8
packages = find:
install_requires = 
    numpy
    einops
    torch>=1.11.0
    pandas
    dicom-utils @ git+https://github.com/medcognetics/dicom-utils.git#egg=dicom-utils

[options.extras_require]
test = 
  pytest
  pytest-mock
  pytest-cov
  coverage
quality = 
  autoflake
  autopep8
  black
  flake8
  isort

[pycodestyle]
max-line-length = 120

# Create CLI entry points
[options.entry_points]
console_scripts =
  dicom-preprocess = torch_dicom.preprocessing.__main__:entrypoint
